# Gymformer

./: .gitignore  ARC.MD  CHANGELOG.md  README.md  TODO.md  launch.py  pyproject.toml  requirements.txt  run_experiment.sh
config/: config.yaml
docs/: techdoc.md
examples/: _setup.ipynb  cot_ablation.ipynb  dataset.ipynb  example.ipynb  inference.ipynb  modified.py  original.py  ppo_torch_implementation.py  reward_model.ipynb  torch_impl.ipynb  torchrl.ipynb  trl_test.ipynb
gymformer/env/: __init__.py  cot_env.py  rlhf_env.py
gymformer/lm/: reward.py
gymformer/rl/: common_nn.py  ppo.py  trainer.py  transformers_nn.py
gymformer/trainer/: __init__.py  trainer.py
gymformer/utils/: utils.py
hyperparameters/: hyperparameters.yaml
lm_human_preferences/: __init__.py  reward_model.py  train_lm.py  train_reward.py  utils.py
lm_human_preferences/env/: rlhf_env.py
lm_human_preferences/lm/: reward.py
lm_human_preferences/rl/: policy.py  ppo_trainer.py  torchrl_train_ppo.py
notebooks/: dataset.ipynb  language_model.ipynb
scripts/: decode_openai_data.py  download_openai_data.sh
tests/: test_end2end.py  test_rlhf_env_math.py  test_train_reward.py
