[project]
name = "gymformer"
version = "1.0.0"
description = ""
authors = [
    {name = "eryawww",email = "zazaneryawan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "datasets (>=3.3.2,<4.0.0)",
    "wandb (>=0.19.8,<0.20.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "swifter (>=1.4.0,<2.0.0)",
    "gymnasium (>=1.1.1,<2.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "tensorboard (>=2.19.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "gymformer"}]


[tool.poetry.group.dev.dependencies]
notebook = "^7.3.2"
commitizen = "^4.4.1"
pytest = "^8.3.5"


[tool.commitizen]
name = "cz_customize"
tag_format = "$version"
version_scheme = "semver"
version = "1.0.0"
update_changelog_on_bump = true
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen.customize]
message_template = "[{{change_type}}]: {{message}}"
example = "[FEAT]: this feature enable customize through config file"

[[tool.commitizen.customize.questions]]
type = "list"
name = "change_type"
choices = [{value = "FEAT", name = "[FEAT]: A new major feature change."}, {value = "REFACTOR", name = "[REFACTOR]: No code behavior change"}, {value = "EXPERIMENT", name = "[EXPERIMENT]: Preparing for running experiments"}]
message = "Select the type of change you are committing"

[[tool.commitizen.customize.questions]]
type = "input"
name = "message"
message = "Add information on commit message"